``` mermaid
erDiagram
    LIBRO }o--|{ AUTORE : SCRITTO_DA
    LIBRO ||--|{ COPIA : ha
    CASA_EDITRICE ||--o{ LIBRO : PUBBLICA
    GENERE }|--o{ LIBRO : APPARTIENE
    UTENTE ||--o{ PRENOTAZIONE : PRENOTA
    PRENOTAZIONE }o--|| LIBRO : INCLUDE
    UTENTE ||--o{ PRESTITO : PRENOTA
    PRESTITO }o--|| LIBRO : INCLUDE
    MULTA |o--o| PRESTITO : SUBISCE

    LIBRO {
        VARCHAR ISBN   PK
        VARCHAR titolo
        YEAR annoPubblicazione
    }
    COPIA {
        INT IDCopia PK
        VARCHAR ISBN   FK
        ENUM stato
    }
    AUTORE {
        INT id PK
        VARCHAR nome
        VARCHAR cognome
        DATE dataNascita
    }
    CASA_EDITRICE {
        INT PIVA PK
        VARCHAR nome
    }
    GENERE {
        VARCHAR NOME PK
    }
    UTENTE {
        VARCHAR CF PK
        DATE dataNascita
        VARCHAR nome
        VARCHAR cognome
        ENUM tipo
    }
    PRENOTAZIONE {
        INT IDPrenotazione PK
        VARCHAR CF FK
        VARCHAR ISBN FK
        TIMESTAMP dataRichiesta
        ENUM stato
    }
    PRESTITO {
        INT IDPrestito PK
        VARCHAR CF FK
        INT IDCopia FK
        TIMESTAMP dataInizio
        TIMESTAMP dataFinePrevista
        TIMESTAMP dataFineEffettiva*
    }
    MULTA {
        INT ID_MULTA PK
        INT IDPrestito FK
        DECIMAL costo
        ENUM stato
    }
```